# rancher-ai-agent

./: .gitignore  README.md  index.html  index.yaml  main.py  openapi.yaml  pyproject.toml
.github/workflows/: publish-chart.yml  run-tests.yml
agents/: __init__.py  k8s.py  rag.py
app/: dependencies.py  main.py  types.py
app/agents/: k8s.py
app/routers/: chat.py  ui.py  websocket.py
app/services/: auth.py  db.py  llm.py  memory.py
app/services/agent/: __init__.py  agent.py  base.py  builtin_agents.py  chat.py  child.py  factory.py  parent.py  root.py
chart/: Chart.yaml  values.yaml
chart/agent/: Chart.yaml  values.yaml
chart/agent/templates/: ai-agent-deployment.yaml  db-deployment.yaml  db-persistent-volume-claim.yaml  db-persistent-volume.yaml  db-service.yaml  llm-config.yaml  mcp-deployment.yaml  mcp-service.yaml
chart/agent/templates/cert/: agent-sa.yaml  mcp-sa.yaml
chart/templates/: ai-agent-deployment.yaml  ai-agent-service.yaml  ingress.yaml  llm-config.yaml  mcp-deployment.yaml  mcp-service.yaml
e2e/: pyproject.toml  test_agent.py
package/: Dockerfile
src/: index.html  main.py
src/agents/: __init__.py  command_parent.py  k8s.py  rag.py
tests/: test_k8s_agent.py  test_main.py  test_rag.py
tests/e2e/: test_agent.py
tests/integration/: test_agent.py
tests/unit/: test_k8s_agent.py  test_main.py  test_rag.py  test_websocket.py
